CMAKE_MINIMUM_REQUIRED( VERSION 3.15 )
PROJECT( EDITOR LANGUAGES CXX )

SET(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}")
INCLUDE(CMakeUtils)

# ѕеременные дл€ компил€ции проекта
SET(EDITOR_BINARY_DIR "${CMAKE_CURRENT_SOURCE_DIR}/bin/${CMAKE_BUILD_TYPE}")
SET(EDITOR_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/include")
SET(EDITOR_INSTALL_DIR "${EDITOR_BINARY_DIR}/")

# Includes по умолчанию
INCLUDE_DIRECTORIES(
    ${EDITOR_INCLUDE_DIR}
    $ENV{DXSDK_DIR}/Include
)

# ѕути дл€ библиотек
LINK_DIRECTORIES(
    $ENV{DXSDK_DIR}/Lib/x86
)

ADD_DEFINITIONS(
    -D_CRT_SECURE_NO_WARNINGS
    -D_SCL_SECURE_NO_WARNINGS
    -DBOOST_ALL_NO_LIB
    -DBOOST_PYTHON_STATIC_LIB
    -DBOOST_PYTHON_STATIC_MODULE
)

ADD_SUBDIRECTORY(lib)
ADD_SUBDIRECTORY(src)
