CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )
PROJECT( boost C )

FILE( GLOB_RECURSE HPP_FILES ${EDITOR_INCLUDE_DIR}/boost/*.hpp )
FILE( GLOB_RECURSE CPP_FILES *.cpp *.hpp )

SOURCE_GROUP_EXT( ${EDITOR_INCLUDE_DIR}/boost *.hpp include )
SOURCE_GROUP_EXT( ${CMAKE_CURRENT_SOURCE_DIR} *.hpp include )
SOURCE_GROUP_EXT( ${CMAKE_CURRENT_SOURCE_DIR} *.cpp src )

INCLUDE_DIRECTORIES(
    ${EDITOR_INCLUDE_DIR}/python
)

ADD_LIBRARY( boost STATIC ${HPP_FILES} ${CPP_FILES} )
TARGET_LINK_LIBRARIES( boost python24 )