CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )
PROJECT( python C )

FILE( GLOB_RECURSE SOURCE_FILES *.c )
FILE( GLOB_RECURSE HEADER_FILES ${EDITOR_INCLUDE_DIR}/python/*.h ${CMAKE_CURRENT_SOURCE_DIR}/*.h )

SOURCE_GROUP_EXT( ${EDITOR_INCLUDE_DIR}/python *.h include )
SOURCE_GROUP_EXT( ${CMAKE_CURRENT_SOURCE_DIR} *.h include )
SOURCE_GROUP_EXT( ${CMAKE_CURRENT_SOURCE_DIR} *.c src )

INCLUDE_DIRECTORIES(
    psyco
    psyco/Python
    psyco/Objects
    psyco/i386
    Modules
    Objects
    Python
    Parser
    ${EDITOR_INCLUDE_DIR}/python
    ${EDITOR_INCLUDE_DIR}/zlib
)

ADD_DEFINITIONS(
   -DPy_ENABLE_SHARED
   -DPy_BUILD_CORE
   -D_USRDLL
   -DWIN32
)

ADD_LIBRARY( python24 SHARED ${HEADER_FILES} ${SOURCE_FILES} )
TARGET_LINK_LIBRARIES( python24 zlib )
INSTALL(TARGETS python24 DESTINATION ${EDITOR_INSTALL_DIR})
