CMAKE_MINIMUM_REQUIRED(VERSION 3.15)
PROJECT( zlib LANGUAGES C )

FILE( GLOB SOURCE_FILES *.c )
FILE( GLOB_RECURSE HEADER_FILES ${EDITOR_INCLUDE_DIR}/zlib/*.h )

INCLUDE_DIRECTORIES(
    ${EDITOR_INCLUDE_DIR}/zlib
)

SOURCE_GROUP_EXT( ${EDITOR_INCLUDE_DIR}/zlib *.h include )
SOURCE_GROUP_EXT( ${CMAKE_CURRENT_SOURCE_DIR} *.c src )

ADD_LIBRARY( zlib STATIC ${HEADER_FILES} ${SOURCE_FILES} )
